tests/compile-errors/src/relative-import.stderr
error: Use-statements in USDT macros cannot contain relative imports (`super`), because the generated macros may be called from anywhere in a crate. Consider using `crate` instead.
  --> $DIR/relative-import.rs:24:9
   |
24 |     use super::Expected;
   |         ^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `my_provider`
  --> $DIR/relative-import.rs:29:5
   |
29 |     my_provider::my_probe!(|| Different { x: 0 });
   |     ^^^^^^^^^^^ use of undeclared crate or module `my_provider`
